# flaskr

./: .gitignore  README.md  pyproject.toml
flaskr/: __init__.py  auth.py  blog.py  schema.sql
flaskr/static/: style.css
flaskr/templates/: base.html.jinja  rss.xml.jinja
flaskr/templates/blog/: create.html.jinja  create_or_update.html.jinja  index.html.jinja  read.html.jinja  update.html.jinja
tests/: conftest.py  data.sql  test_blog.py
