[project]
name = "flaskr"
version = "1.0.0"
dependencies = [
    "flask",
    "Flask-Markdown",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# py-modules = []
packages = ["flaskr"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["flaskr"]
